--- a/app1/app1/MainWindow.xaml
+++ b/app1/app1/MainWindow.xaml
@@ -70,7 +70,7 @@
             <ColumnDefinition Width="59*"/>
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
-        <Image x:Name="imagebox" Grid.Column="1" RenderTransformOrigin="0.501,0.502" Stretch="Fill" Height="180" Margin="134,80,506,0" VerticalAlignment="Top" Width="160" Grid.ColumnSpan="2"/>
+        <Image x:Name="imagebox" Grid.Column="1" RenderTransformOrigin="0.501,0.502" Stretch="Fill" Height="180" Margin="131,80,0,0" VerticalAlignment="Top" Width="160" Grid.ColumnSpan="2" HorizontalAlignment="Left"/>
         <Label Grid.Column="1" Content="Static Prediction ::" HorizontalAlignment="Left" Margin="114,28,0,0" VerticalAlignment="Top" FontSize="16" FontFamily="Corbel" Width="137" Grid.ColumnSpan="2"/>
         <Border Grid.Column="2" HorizontalAlignment="Left" Height="36" Margin="37,337,0,0" VerticalAlignment="Top" Width="306">
             <Grid>
