--- a/app1/app1/MainWindow.xaml
+++ b/app1/app1/MainWindow.xaml
@@ -89,6 +89,8 @@
         <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="180" Margin="295,80,0,0" VerticalAlignment="Top" Width="160" Grid.Column="2"/>
         <Label Content="Calibration Status:" HorizontalAlignment="Left" Height="35" Margin="37,286,0,0" VerticalAlignment="Top" Width="132" FontWeight="Bold" FontSize="14" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Padding="2,5,4,5" Grid.Column="2"/>
         <Label x:Name="timer" Content="not available" HorizontalAlignment="Left" Height="35" Margin="124,135,0,0" VerticalAlignment="Top" Width="132" FontWeight="Normal" FontSize="14" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Padding="2,5,4,5" Grid.Column="2" FontStyle="Italic"/>
+        <RadioButton x:Name="impedance_switch" Grid.Column="2" Content="Impedance" HorizontalAlignment="Left" Margin="421,347,0,0" VerticalAlignment="Top" Checked="impedance_switch_Checked" Height="20" Width="100" FontSize="16"/>
+        <RadioButton x:Name="resistance_switch" Grid.Column="2" Content="Resistance" HorizontalAlignment="Left" Margin="421,321,0,0" VerticalAlignment="Top" Checked="resistance_switch_Checked" IsChecked="True" Height="21" Width="95" FontSize="16"/>
 
     </Grid>
 </Window>
